--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Daevnt</title>
 </head>
 <body>
-  <h1 class="text-primary">this is me here</h1>
+  <header>
+    
+  </header>
 
 
   <!-- bootstrap 5 cdn link -->
