--- a/index.html
+++ b/index.html
@@ -136,60 +136,45 @@
         </div>
       </div>
 
-      <!-- conference -->
+    
+
+      <!-- brand section -->
+
       <div class="container">
-        <section class="conference-section">
-          <div class="future-main-content">
-            <div class="images-container">
-              <img src="./images/event1.jpeg" alt="Person working on laptop" id="eventimg1"/>
+        <div class="d-flex justify-content-center align-items-center gap-4">
 
-              <div class="d-flex">
-
-                <img src="./images/event2.jpeg" alt="Business man at desk" id="eventimg2"/>
-                <img
-                  src="./images/event3.jpeg"
-                  alt="Man smiling and working on laptop"
-                  id="eventimg3"
-                />
-              </div>
-            </div>
-            <div class="conference-details">
-              <p>About the Conference</p>
-              <h2>Where Innovation Meets Virtual Experiences</h2>
-
-              <ul>
-                <li>
-                  <h3>Expert keynote speakers</h3>
-                  <p>
-                    Hear from thought leaders and industry pioneers as they
-                    share their expertise, trends, and strategies to keep you
-                    ahead of the curve.
-                  </p>
-                </li>
-                <li>
-                  <h3>Education Programs</h3>
-                  <p>
-                    Engage in interactive sessions, workshops, and masterclasses
-                    designed to expand your skills and knowledge in your field.
-                  </p>
-                </li>
-                <li>
-                  <h3>Notes & Highlights</h3>
-                  <p>
-                    Stay informed with key takeaways, session summaries, and
-                    exclusive insights to ensure you never miss a moment of
-                    valuable content.
-                  </p>
-                </li>
-              </ul>
-
-              <p>
-                Join us as we
-                <strong>redefine conference for the 21st century!</strong>
-              </p>
+          <!-- box1 -->
+          <div class="box">
+            <div class="d-flex justify-content-center align-items-center">
+              <img src="./images/brand1.png" alt="box img1" class="box-img">
+              <p class="text-white">Micro Software</p>
             </div>
           </div>
-        </section>
+
+          <!-- box2 -->
+          <div class="box">
+            <div class="d-flex justify-content-center align-items-center">
+              <img src="./images/brand2.png" alt="box img1" class="box-img">
+              <p class="text-white">Globe Event Planner</p>
+            </div>
+          </div>
+
+          <!-- box3 -->
+          <div class="box">
+            <div class="d-flex justify-content-center align-items-center">
+              <img src="./images/brand3.png" alt="box img1" class="box-img">
+              <p class="text-white">Luxe Diamond</p>
+            </div>
+          </div>
+
+          <!-- box4 -->
+          <div class="box">
+            <div class="d-flex justify-content-center align-items-center">
+              <img src="./images/brand4.png" alt="box img1" class="box-img">
+              <p class="text-white">Prestige Platinum</p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
