footer structure create

--- a/index.html
+++ b/index.html
@@ -390,6 +390,10 @@
     <!-- blog item here -->
 
     <section id="blog-section">
+      <div class="container">
+
+        <h1 class="text-white">Recent Blog</h1>
+      </div>
       <div class="blog-container">
         <div class="blog-box">
           <img src="./images/blog1.jpeg" alt="blog image">
@@ -420,6 +424,55 @@
       </div>
     </section>
     
+
+    <!-- footer section -->
+     <footer class="bg-dark text-white py-5">
+        <div class="container">
+            <div class="row g-4">
+                <!-- First Column -->
+                <div class="col-md-4">
+                    <div class="brand-logo text-white">Daevnt</div>
+                    <p class="text-muted">Pellentesque nec tempor sapien. Pellentesque vel placerat nibh. Suspendisse venenatis.</p>
+                    
+                    <div class="input-group mb-3">
+                        <input type="email" class="form-control" placeholder="Enter Your Email Address">
+                        <button class="btn btn-primary" type="button">Subscribe →</button>
+                    </div>
+                </div>
+
+                <!-- Second Column -->
+                <div class="col-md-2">
+                    <h5 class="section-heading text-white">Useful Link</h5>
+                    <ul class="list-unstyled">
+                        <li><a href="#" class="text-decoration-none text-muted mb-2 d-block">About Events</a></li>
+                        <li><a href="#" class="text-decoration-none text-muted mb-2 d-block">Future Events</a></li>
+                        <li><a href="#" class="text-decoration-none text-muted mb-2 d-block">Top Speakers</a></li>
+                        <li><a href="#" class="text-decoration-none text-muted mb-2 d-block">Fax Pages</a></li>
+                        <li><a href="#" class="text-decoration-none text-muted mb-2 d-block">Get Ticket</a></li>
+                    </ul>
+                </div>
+
+                <!-- Third Column -->
+                <div class="col-md-4">
+                    <h5 class="section-heading text-white">Address</h5>
+                    <p class="text-muted">
+                        Get Reusable Rd, Toronto, ON M4A 1E4, Canada<br>
+                        Phone: +1-416-8241228<br>
+                        Email: info@email.com
+                    </p>
+                </div>
+            </div>
+
+          </div>
+          <hr class="custom-hr">
+
+          <!-- Copyright -->
+          <div class="">
+              <div class="col-6 text-center text-white">
+                  <p class="mb-0">© 2025 Transnemarch. All Rights Reserved.</p>
+              </div>
+          </div>
+    </footer>
 
     <!-- bootstrap5 cdn link -->
     <script
