--- a/index.html
+++ b/index.html
@@ -587,7 +587,6 @@
                     </div> -->
             <div class="input-group mb-3 flat-input-group">
               <span class="input-group-text">
-                <i class="fas fa-envelope"></i>
               </span>
               <input
                 type="email"
@@ -643,18 +642,25 @@
       </div>
       <hr class="custom-hr" />
 
-      <div class="container">
+      <div class="container d-flex justify-content-between align-items-center p-2">
 
         <!-- Copyright -->
         <div >
-          <div class="col-6 text-center text-white">
+          <div class=" text-white">
             <p class="mb-0">© 2025 Transnemarch. All Rights Reserved.</p>
           </div>
         </div>
 
         <!-- social icon -->
 
-        <div></div>
+        <div class="d-flex gap-3">
+
+          <i class="fa-brands fa-facebook"></i>
+          <i class="fa-brands fa-linkedin-in"></i>
+          <i class="fa-brands fa-x-twitter"></i>
+          <i class="fa-brands fa-instagram"></i>
+          
+        </div>
       </div>
 
     </footer>
@@ -665,5 +671,8 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
+
+    <!-- font awesome -->
+    <script src="https://kit.fontawesome.com/bee4f2375d.js" crossorigin="anonymous"></script>
   </body>
 </html>
