--- a/index.html
+++ b/index.html
@@ -665,6 +665,10 @@
 
     </footer>
 
+    <!-- scroll up arrow -->
+    <a href="#"> <i class="fas fa-arrow-up"></i> </a>
+
+
     <!-- bootstrap5 cdn link -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
