future event button issue solve

--- a/index.html
+++ b/index.html
@@ -84,8 +84,9 @@
     
 
     <!-- future event section -->
+    
     <section class="event-section">
-      <div class="container">
+      <div class="container future">
         <!-- Section Title -->
         <h2>FUTURE EVENTS</h2>
 
@@ -112,7 +113,7 @@
           </div>
           <!-- Action -->
           <div class="col-md-2 text-end">
-            <button class="btn-purple-event">Buy Ticket</button>
+            <button class="btn-purple-event text-uppercase">Buy Ticket</button>
           </div>
         </div>
 
