--- a/index.html
+++ b/index.html
@@ -238,13 +238,13 @@
 
       <!-- brand section -->
 
-      <div class="container">
+      <div class="container brand">
         <div class="d-flex justify-content-center align-items-center gap-4">
           <!-- box1 -->
           <div class="box">
-            <div class="d-flex justify-content-center align-items-center">
+            <div class="d-flex justify-content-center align-items-center ">
               <img src="./images/brand1.png" alt="box img1" class="box-img" />
-              <p class="text-white">
+              <p class="text-white mb-0">
                 Micro <br />
                 Software
               </p>
@@ -255,7 +255,7 @@
           <div class="box">
             <div class="d-flex justify-content-center align-items-center">
               <img src="./images/brand2.png" alt="box img1" class="box-img" />
-              <p class="text-white">
+              <p class="text-white mb-0">
                 Globe Event <br />
                 Planner
               </p>
@@ -266,7 +266,7 @@
           <div class="box">
             <div class="d-flex justify-content-center align-items-center">
               <img src="./images/brand3.png" alt="box img1" class="box-img" />
-              <p class="text-white">
+              <p class="text-white mb-0">
                 Luxe <br />
                 Diamond
               </p>
@@ -277,7 +277,7 @@
           <div class="box">
             <div class="d-flex justify-content-center align-items-center">
               <img src="./images/brand4.png" alt="box img1" class="box-img" />
-              <p class="text-white">
+              <p class="text-white mb-0">
                 Prestige <br />
                 Platinum
               </p>
