price card vector added

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
     <!-- faq and pricing section -->
 
     <section>
-      <div class="faq-section">
+      <div class="faq-section frequent">
         <div class="row align-items-center">
           <!-- Left Image -->
           <div class="col-md-6 mb-4 mb-md-0 text-center">
@@ -513,10 +513,10 @@
                 ></span>
               </div>
               <ul class="pricing-features mt-3">
-                <li>Access to all keynote sessions</li>
-                <li>Entry to exhibition area</li>
-                <li>No access to workshops</li>
-                <li>No networking lounge access</li>
+                <li><span><img src="./images/Vector.png" alt="vector icon"></span> Access to all keynote sessions</li>
+                <li><span><img src="./images/Vector.png" alt="vector icon"></span> Entry to exhibition area</li>
+                <li><span><img src="./images/Vector.png" alt="vector icon"></span> No access to workshops</li>
+                <li><span><img src="./images/Vector.png" alt="vector icon"></span> No networking lounge access</li>
               </ul>
               <button class="btn-ticket premium">GET TICKET NOW</button>
             </div>
@@ -545,10 +545,10 @@
                 ></span>
               </div>
               <ul class="pricing-features mt-3">
-                <li>Access to all keynote sessions</li>
-                <li>Entry to exhibition area</li>
-                <li>No access to workshops</li>
-                <li>No networking lounge access</li>
+                <li><span><img src="./images/Vector1.png" alt="vector icon"></span> Access to all keynote sessions</li>
+                <li><span><img src="./images/Vector1.png" alt="vector icon"></span> Entry to exhibition area</li>
+                <li><span><img src="./images/Vector1.png" alt="vector icon"></span> No access to workshops</li>
+                <li><span><img src="./images/Vector1.png" alt="vector icon"></span> No networking lounge access</li>
               </ul>
               <button class="btn-ticket ordinary">GET TICKET NOW</button>
             </div>
