google font added

--- a/index.html
+++ b/index.html
@@ -560,40 +560,43 @@
     <!-- blog item here -->
 
     <section id="blog-section">
-      <div class="container">
-        <h1 class="text-white">Recent Blog</h1>
-      </div>
-      <div class="blog-container">
-        <div class="blog-box">
-          <img src="./images/blog1.jpeg" alt="blog image" />
-          <p>
-            Beyond the Stage: How Conferences Inspire Innovation & Collaboration
-          </p>
-          <div class="blog-meta">
-            <span>EventTrends</span>
-            <span>12 Feb 2025</span>
-          </div>
-        </div>
+      <div class="blog-brod">
 
-        <div class="blog-box">
-          <img src="./images/blog2.jpeg" alt="blog image" />
-          <p>
-            Beyond the Stage: How Conferences Inspire Innovation & Collaboration
-          </p>
-          <div class="blog-meta">
-            <span>EventTrends</span>
-            <span>12 Feb 2025</span>
-          </div>
+        <div class="container">
+          <h1 class="text-white">Recent Blog</h1>
         </div>
-
-        <div class="blog-box">
-          <img src="./images/blog3.jpeg" alt="blog image" />
-          <p>
-            Beyond the Stage: How Conferences Inspire Innovation & Collaboration
-          </p>
-          <div class="blog-meta">
-            <span>EventTrends</span>
-            <span>12 Feb 2025</span>
+        <div class="blog-container">
+          <div class="blog-box">
+            <img src="./images/blog1.jpeg" alt="blog image" />
+            <p>
+              Beyond the Stage: How Conferences Inspire Innovation & Collaboration
+            </p>
+            <div class="blog-meta">
+              <span>EventTrends</span>
+              <span>12 Feb 2025</span>
+            </div>
+          </div>
+  
+          <div class="blog-box">
+            <img src="./images/blog2.jpeg" alt="blog image" />
+            <p>
+              Beyond the Stage: How Conferences Inspire Innovation & Collaboration
+            </p>
+            <div class="blog-meta">
+              <span>EventTrends</span>
+              <span>12 Feb 2025</span>
+            </div>
+          </div>
+  
+          <div class="blog-box">
+            <img src="./images/blog3.jpeg" alt="blog image" />
+            <p>
+              Beyond the Stage: How Conferences Inspire Innovation & Collaboration
+            </p>
+            <div class="blog-meta">
+              <span>EventTrends</span>
+              <span>12 Feb 2025</span>
+            </div>
           </div>
         </div>
       </div>
