about icon added front of text

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             <div class="feature-item d-flex">
               <i class="bi bi-check2-circle fs-5"></i>
               <div>
-                <strong class="text-white">Expert keynote speakers</strong>
+                <strong class="text-white"><span class="me-3"><img src="./images/7-Check.png" alt="special icon"></span> Expert keynote speakers</strong>
                 <p class="text-white mb-0 small">
                   Hear from thought leaders and industry pioneers as they share
                   their expertise, trends, and strategies to keep you ahead of
@@ -213,7 +213,7 @@
             <div class="feature-item d-flex">
               <i class="bi bi-check2-circle fs-5"></i>
               <div>
-                <strong class="text-white">Education Programs</strong>
+                <strong class="text-white"><span class="me-3"><img src="./images/7-Check.png" alt="special icon"></span> Education Programs</strong>
                 <p class="text-white mb-0 small">
                   Engage in interactive sessions, workshops, and masterclasses
                   designed to expand your skills and knowledge in your field.
@@ -224,7 +224,7 @@
             <div class="feature-item d-flex">
               <i class="bi bi-check2-circle fs-5"></i>
               <div>
-                <strong class="text-white">Notes & Highlights</strong>
+                <strong class="text-white"><span class="me-3"><img src="./images/7-Check.png" alt="special icon"></span> Notes & Highlights</strong>
                 <p class="text-white mb-0 small">
                   Stay informed with key takeaways, session summaries, and
                   exclusive insights to ensure you never miss a moment of
@@ -579,7 +579,7 @@
   
           <div class="blog-box">
             <img src="./images/blog2.jpeg" alt="blog image" />
-            <p>
+            <p id="special-border">
               Beyond the Stage: How Conferences Inspire Innovation & Collaboration
             </p>
             <div class="blog-meta">
