about right side text done

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
           <!-- Right Side Text -->
           <div class="col-md-6">
-            <p class="text-white small mb-1">About the Conference</p>
+            <p class="text-white about-para mb-1">About the Conference</p>
             <h2 class="section-title mb-4">
               Where Innovation Meets Virtual Experiences
             </h2>
@@ -201,8 +201,8 @@
             <div class="feature-item d-flex">
               <i class="bi bi-check2-circle fs-5"></i>
               <div>
-                <strong class="text-white"><span class="me-3"><img src="./images/7-Check.png" alt="special icon"></span> Expert keynote speakers</strong>
-                <p class="text-white mb-0 small">
+                <strong class="text-white strong-text"><span class="me-3"><img src="./images/7-Check.png" alt="special icon"></span> Expert keynote speakers</strong>
+                <p class=" mb-0 about-param">
                   Hear from thought leaders and industry pioneers as they share
                   their expertise, trends, and strategies to keep you ahead of
                   the curve.
@@ -213,8 +213,8 @@
             <div class="feature-item d-flex">
               <i class="bi bi-check2-circle fs-5"></i>
               <div>
-                <strong class="text-white"><span class="me-3"><img src="./images/7-Check.png" alt="special icon"></span> Education Programs</strong>
-                <p class="text-white mb-0 small">
+                <strong class="text-white strong-text"><span class="me-3"><img src="./images/7-Check.png" alt="special icon"></span> Education Programs</strong>
+                <p class=" mb-0 about-param">
                   Engage in interactive sessions, workshops, and masterclasses
                   designed to expand your skills and knowledge in your field.
                 </p>
@@ -224,8 +224,8 @@
             <div class="feature-item d-flex">
               <i class="bi bi-check2-circle fs-5"></i>
               <div>
-                <strong class="text-white"><span class="me-3"><img src="./images/7-Check.png" alt="special icon"></span> Notes & Highlights</strong>
-                <p class="text-white mb-0 small">
+                <strong class="text-white strong-text"><span class="me-3"><img src="./images/7-Check.png" alt="special icon"></span> Notes & Highlights</strong>
+                <p class=" mb-0 about-param">
                   Stay informed with key takeaways, session summaries, and
                   exclusive insights to ensure you never miss a moment of
                   valuable content.
@@ -234,7 +234,7 @@
             </div>
 
             <p class="cta text-white">
-              Join us as we redefine conference for the 21st century!
+              Join us as we redefine conference for <br> the 21st century!
             </p>
           </div>
         </div>
