re-arrange footer input field

--- a/index.html
+++ b/index.html
@@ -201,8 +201,13 @@
             <div class="feature-item d-flex">
               <i class="bi bi-check2-circle fs-5"></i>
               <div>
-                <strong class="text-white strong-text"><span class="me-3"><img src="./images/7-Check.png" alt="special icon"></span> Expert keynote speakers</strong>
-                <p class=" mb-0 about-param">
+                <strong class="text-white strong-text"
+                  ><span class="me-3"
+                    ><img src="./images/7-Check.png" alt="special icon"
+                  /></span>
+                  Expert keynote speakers</strong
+                >
+                <p class="mb-0 about-param">
                   Hear from thought leaders and industry pioneers as they share
                   their expertise, trends, and strategies to keep you ahead of
                   the curve.
@@ -213,8 +218,13 @@
             <div class="feature-item d-flex">
               <i class="bi bi-check2-circle fs-5"></i>
               <div>
-                <strong class="text-white strong-text"><span class="me-3"><img src="./images/7-Check.png" alt="special icon"></span> Education Programs</strong>
-                <p class=" mb-0 about-param">
+                <strong class="text-white strong-text"
+                  ><span class="me-3"
+                    ><img src="./images/7-Check.png" alt="special icon"
+                  /></span>
+                  Education Programs</strong
+                >
+                <p class="mb-0 about-param">
                   Engage in interactive sessions, workshops, and masterclasses
                   designed to expand your skills and knowledge in your field.
                 </p>
@@ -224,8 +234,13 @@
             <div class="feature-item d-flex">
               <i class="bi bi-check2-circle fs-5"></i>
               <div>
-                <strong class="text-white strong-text"><span class="me-3"><img src="./images/7-Check.png" alt="special icon"></span> Notes & Highlights</strong>
-                <p class=" mb-0 about-param">
+                <strong class="text-white strong-text"
+                  ><span class="me-3"
+                    ><img src="./images/7-Check.png" alt="special icon"
+                  /></span>
+                  Notes & Highlights</strong
+                >
+                <p class="mb-0 about-param">
                   Stay informed with key takeaways, session summaries, and
                   exclusive insights to ensure you never miss a moment of
                   valuable content.
@@ -234,7 +249,8 @@
             </div>
 
             <p class="cta text-white">
-              Join us as we redefine conference for <br> the 21st century!
+              Join us as we redefine conference for <br />
+              the 21st century!
             </p>
           </div>
         </div>
@@ -298,11 +314,7 @@
         <div class="row align-items-center">
           <!-- Left Image -->
           <div class="col-md-6 mb-4 mb-md-0 text-center">
-            <img
-              src="./images/faq.jpeg"
-              alt="FAQ Image"
-              class="faq-img"
-            />
+            <img src="./images/faq.jpeg" alt="FAQ Image" class="faq-img" />
           </div>
 
           <!-- Right FAQ -->
@@ -513,10 +525,30 @@
                 ></span>
               </div>
               <ul class="pricing-features mt-3">
-                <li><span><img src="./images/Vector.png" alt="vector icon"></span> Access to all keynote sessions</li>
-                <li><span><img src="./images/Vector.png" alt="vector icon"></span> Entry to exhibition area</li>
-                <li><span><img src="./images/Vector.png" alt="vector icon"></span> No access to workshops</li>
-                <li><span><img src="./images/Vector.png" alt="vector icon"></span> No networking lounge access</li>
+                <li>
+                  <span
+                    ><img src="./images/Vector.png" alt="vector icon"
+                  /></span>
+                  Access to all keynote sessions
+                </li>
+                <li>
+                  <span
+                    ><img src="./images/Vector.png" alt="vector icon"
+                  /></span>
+                  Entry to exhibition area
+                </li>
+                <li>
+                  <span
+                    ><img src="./images/Vector.png" alt="vector icon"
+                  /></span>
+                  No access to workshops
+                </li>
+                <li>
+                  <span
+                    ><img src="./images/Vector.png" alt="vector icon"
+                  /></span>
+                  No networking lounge access
+                </li>
               </ul>
               <button class="btn-ticket premium">GET TICKET NOW</button>
             </div>
@@ -545,10 +577,30 @@
                 ></span>
               </div>
               <ul class="pricing-features mt-3">
-                <li><span><img src="./images/Vector1.png" alt="vector icon"></span> Access to all keynote sessions</li>
-                <li><span><img src="./images/Vector1.png" alt="vector icon"></span> Entry to exhibition area</li>
-                <li><span><img src="./images/Vector1.png" alt="vector icon"></span> No access to workshops</li>
-                <li><span><img src="./images/Vector1.png" alt="vector icon"></span> No networking lounge access</li>
+                <li>
+                  <span
+                    ><img src="./images/Vector1.png" alt="vector icon"
+                  /></span>
+                  Access to all keynote sessions
+                </li>
+                <li>
+                  <span
+                    ><img src="./images/Vector1.png" alt="vector icon"
+                  /></span>
+                  Entry to exhibition area
+                </li>
+                <li>
+                  <span
+                    ><img src="./images/Vector1.png" alt="vector icon"
+                  /></span>
+                  No access to workshops
+                </li>
+                <li>
+                  <span
+                    ><img src="./images/Vector1.png" alt="vector icon"
+                  /></span>
+                  No networking lounge access
+                </li>
               </ul>
               <button class="btn-ticket ordinary">GET TICKET NOW</button>
             </div>
@@ -561,7 +613,6 @@
 
     <section id="blog-section">
       <div class="blog-brod">
-
         <div class="container">
           <h1 class="text-white">Recent Blog</h1>
         </div>
@@ -569,29 +620,32 @@
           <div class="blog-box">
             <img src="./images/blog1.jpeg" alt="blog image" />
             <p>
-              Beyond the Stage: How Conferences Inspire Innovation & Collaboration
+              Beyond the Stage: How Conferences Inspire Innovation &
+              Collaboration
             </p>
             <div class="blog-meta">
               <span>EventTrends</span>
               <span>12 Feb 2025</span>
             </div>
           </div>
-  
+
           <div class="blog-box">
             <img src="./images/blog2.jpeg" alt="blog image" />
             <p id="special-border">
-              Beyond the Stage: How Conferences Inspire Innovation & Collaboration
+              Beyond the Stage: How Conferences Inspire Innovation &
+              Collaboration
             </p>
             <div class="blog-meta">
               <span>EventTrends</span>
               <span>12 Feb 2025</span>
             </div>
           </div>
-  
+
           <div class="blog-box">
             <img src="./images/blog3.jpeg" alt="blog image" />
             <p>
-              Beyond the Stage: How Conferences Inspire Innovation & Collaboration
+              Beyond the Stage: How Conferences Inspire Innovation &
+              Collaboration
             </p>
             <div class="blog-meta">
               <span>EventTrends</span>
@@ -602,96 +656,92 @@
       </div>
     </section>
 
-    <!-- footer section -->
-    <footer class="text-white">
-      <div class="container">
-        <div class="row g-4">
-          <!-- First Column -->
+    <!--footer section  -->
+
+    <footer class="footer">
+      <div class="bg-left"></div>
+      <div class="container footer-content">
+        <div class="row gy-4">
+          <!-- Company Info + Newsletter -->
           <div class="col-md-4">
-            <img src="./images/logo.png" alt="brand logo" />
-            <div class="brand-logo text-white">Daevnt</div>
-            <p class="text-muted">
+            <div class="footer-logo mb-3">
+              <img
+                src="./images/logo.png"
+                alt="site logo"
+                style="height: 40px; vertical-align: middle"
+                class="me-2"
+              />
+              Daevnt
+            </div>
+            <p>
               Pellentesque nec tempor sapien. Pellentesque vel placerat nibh.
               Suspendisse venenatis.
             </p>
 
-            <!-- <div class="input-group mb-3">
-                        <input type="email" class="form-control" placeholder="Enter Your Email Address">
-                        <button class="btn btn-primary" type="button">Subscribe →</button>
-                    </div> -->
-            <div class="input-group mb-3 flat-input-group">
-              <span class="input-group-text"> </span>
-              <input
-                type="email"
-                class="form-control"
-                placeholder="Enter Your Email Address"
-              />
-              <button class="text-white btn" type="button">Subscribe →</button>
+            <!-- new -->
+            <div class="d-flex align-items-center newsletter mt-4">
+              <div class="input-group mb-3 flat-input-group">
+                <span class="input-group-text"> </span>
+                <input
+                  type="email"
+                  class="form-control"
+                  placeholder="Enter Your Email Address"
+                />
+                <button class="text-white btn" type="button">
+                  Subscribe →
+                </button>
+              </div>
             </div>
           </div>
 
-          <!-- Second Column -->
+          <!-- Middle Image -->
+          <div
+            class="col-md-4 d-flex align-items-center justify-content-center"
+          >
+            <img
+              src="./images/elements.png"
+              alt="Design Element"
+              class="img-fluid middle-img"
+            />
+          </div>
+
+          <!-- Useful Links -->
           <div class="col-md-2">
-            <h5 class="section-heading text-white">Useful Link</h5>
+            <h5 class="mb-3">Useful Links</h5>
             <ul class="list-unstyled">
-              <li>
-                <a href="#" class="text-decoration-none text-muted mb-2 d-block"
-                  >About Events</a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none text-muted mb-2 d-block"
-                  >Future Events</a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none text-muted mb-2 d-block"
-                  >Top Speakers</a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none text-muted mb-2 d-block"
-                  >Fax Pages</a
-                >
-              </li>
-              <li>
-                <a href="#" class="text-decoration-none text-muted mb-2 d-block"
-                  >Get Ticket</a
-                >
-              </li>
+              <li><a href="#">About Events</a></li>
+              <li><a href="#">Future Events</a></li>
+              <li><a href="#">Top Speakers</a></li>
+              <li><a href="#">FAQ Pages</a></li>
+              <li><a href="#">Get Ticket</a></li>
             </ul>
           </div>
 
-          <!-- Third Column -->
-          <div class="col-md-4">
-            <h5 class="section-heading text-white">Address</h5>
-            <p class="text-muted">
-              Get Reusable Rd, Toronto, ON M4A 1E4, Canada<br />
-              Phone: +1-416-8241228<br />
-              Email: info@email.com
-            </p>
+          <!-- Contact Info -->
+          <div class="col-md-2">
+            <h5 class="mb-3">Address</h5>
+            <p>612-7 Roanoke Rd, Toronto, ON M3A 1E3, Canada</p>
+            <div><strong>Phone:</strong></div>
+            <span>+1-416-8241228</span>
+            <div><strong>Email:</strong></div>
+            <span><a href="mailto:info@email.com">info@email.com</a></span>
           </div>
         </div>
-      </div>
-      <hr class="custom-hr" />
 
-      <div
-        class="container d-flex justify-content-between align-items-center p-2"
-      >
+        <!-- Divider -->
+        <hr />
+
         <!-- Copyright -->
-        <div>
-          <div class="text-white">
-            <p class="mb-0">© 2025 Transnemarch. All Rights Reserved.</p>
+        <div
+          class="d-flex flex-column flex-md-row justify-content-between align-items-center"
+        >
+          <p class="mb-2 mb-md-0">© 2025 Thememarch. All Rights Reserved.</p>
+          <div class="social-icons">
+            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-x-twitter"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
           </div>
-        </div>
-
-        <!-- social icon -->
-
-        <div class="d-flex gap-3">
-          <i class="fa-brands fa-facebook"></i>
-          <i class="fa-brands fa-linkedin-in"></i>
-          <i class="fa-brands fa-x-twitter"></i>
-          <i class="fa-brands fa-instagram"></i>
         </div>
       </div>
     </footer>
