arrow sign re polish

--- a/index.html
+++ b/index.html
@@ -728,6 +728,11 @@
           </div>
         </div>
 
+        <!-- scroll up arrow -->
+    <div class="fas">
+      <img src="./images/top.png" alt="up icon">
+    </div>
+
         <!-- Divider -->
         <hr />
 
@@ -737,7 +742,7 @@
         >
           <p class="mb-2 mb-md-0">© 2025 Thememarch. All Rights Reserved.</p>
           <div class="social-icons">
-            <a href="#"><i class="fab fa-facebook-f"></i></a>
+            <a href="#" class="activeonly"><i class="fab fa-facebook-f"></i></a>
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
             <a href="#"><i class="fab fa-x-twitter"></i></a>
             <a href="#"><i class="fab fa-instagram"></i></a>
@@ -747,7 +752,9 @@
     </footer>
 
     <!-- scroll up arrow -->
-    <a href="#"> <i class="fas fa-arrow-up"></i> </a>
+    <div class="fas">
+      <img src="./images/top.png" alt="up icon">
+    </div>
 
     <!-- bootstrap5 cdn link -->
     <script
