faq bg image added

--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 
     <!-- faq and pricing section -->
 
-    <section>
+    <section id="faqandpricing">
       <div class="faq-section frequent">
         <div class="row align-items-center">
           <!-- Left Image -->
