footer text issue solve

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar navbar-expand-lg ">
         <div
           class="container-fluid custom-navbar d-flex justify-content-between align-items-center"
         >
@@ -54,6 +54,15 @@
           </ul>
         </div>
       </nav>
+      <!-- horizontal -->
+       <hr>
+
+
+      <!-- speaker image -->
+
+      <div id="speaker">
+        <img src="./images/headerimg.png" alt="header image">
+      </div>
     </header>
 
     <!-- slider text -->
@@ -707,24 +716,24 @@
 
           <!-- Useful Links -->
           <div class="col-md-2">
-            <h5 class="mb-3">Useful Links</h5>
+            <h5 class="mb-3 usefull">Useful Links</h5>
             <ul class="list-unstyled">
-              <li><a href="#">About Events</a></li>
-              <li><a href="#">Future Events</a></li>
-              <li><a href="#">Top Speakers</a></li>
-              <li><a href="#">FAQ Pages</a></li>
-              <li><a href="#">Get Ticket</a></li>
+              <li>About Events</li>
+              <li class="futures">Future Events</li>
+              <li>Top Speakers</li>
+              <li>FAQ Pages</li>
+              <li>Get Ticket</li>
             </ul>
           </div>
 
           <!-- Contact Info -->
           <div class="col-md-2">
-            <h5 class="mb-3">Address</h5>
-            <p>612-7 Roanoke Rd, Toronto, ON M3A 1E3, Canada</p>
-            <div><strong>Phone:</strong></div>
-            <span>+1-416-8241228</span>
-            <div><strong>Email:</strong></div>
-            <span><a href="mailto:info@email.com">info@email.com</a></span>
+            <h5 class="mb-3 usefull">Address</h5>
+            <p id="spec">612-7 Roanoke Rd, Toronto, ON M3A 1E3, Canada</p>
+            <div ><strong id="strong">Phone:</strong></div>
+            <span >+1-416-8241228</span>
+            <div style="margin-top: 12px;"><strong id="strong">Email:</strong></div>
+            <span>info@email.com</span>
           </div>
         </div>
 
