image issue solve

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg ">
+      <nav class="navbar navbar-expand-lg">
         <div
           class="container-fluid custom-navbar d-flex justify-content-between align-items-center"
         >
@@ -55,13 +55,12 @@
         </div>
       </nav>
       <!-- horizontal -->
-       <hr>
-
+      <hr />
 
       <!-- speaker image -->
 
       <div id="speaker">
-        <img src="./images/headerimg.png" alt="header image">
+        <img src="./images/headerimg.png" alt="header image" />
       </div>
     </header>
 
@@ -730,20 +729,22 @@
           <div class="col-md-2">
             <h5 class="mb-3 usefull">Address</h5>
             <p id="spec">612-7 Roanoke Rd, Toronto, ON M3A 1E3, Canada</p>
-            <div ><strong id="strong">Phone:</strong></div>
-            <span >+1-416-8241228</span>
-            <div style="margin-top: 12px;"><strong id="strong">Email:</strong></div>
+            <div><strong id="strong">Phone:</strong></div>
+            <span>+1-416-8241228</span>
+            <div style="margin-top: 12px">
+              <strong id="strong">Email:</strong>
+            </div>
             <span>info@email.com</span>
           </div>
         </div>
 
         <!-- scroll up arrow -->
-    <div class="fas">
+        <div class="fas">
       <img src="./images/top.png" alt="up icon">
     </div>
 
         <!-- Divider -->
-        <hr />
+        <hr style="z-index: 99;"/>
 
         <!-- Copyright -->
         <div
@@ -760,10 +761,8 @@
       </div>
     </footer>
 
-    <!-- scroll up arrow -->
-    <div class="fas">
-      <img src="./images/top.png" alt="up icon">
-    </div>
+    <!-- footer end here -->
+
 
     <!-- bootstrap5 cdn link -->
     <script
