slide text done

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         </div>
       </nav>
       <!-- horizontal -->
-      <hr />
+      <hr class="z-11"/>
 
 
       <div class="speaker-section container">
@@ -91,9 +91,9 @@
       <div class="vertical-social">
         <span class="pipe text-white">Social:</span>
         <span class="pipe text-white">FB_IN_TW_DR</span>
-        <hr>
+        <hr class="content-bar">
         <span class="pipe">1-A16-524/2.28</span>
-        <hr>
+        <hr class="content-bar">
         <span class="pipe">info@deevnt.orgworld</span>
       </div>
     </header>
@@ -106,7 +106,7 @@
         >
           <!-- Text 1 (visually cropped) -->
           <h3 class="slide-text mb-0 d-flex align-items-center">
-            <span class="invisible-text">Crea</span
+            <span class="text-white">Crea</span
             ><span class="visible-text text-white">tive & Innovative</span>
           </h3>
 
