--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <!-- Left: Logo + Name -->
           <a class="navbar-brand" href="#">
             <img src="./images/logo.png" alt="Website Logo" />
-            <span class="text-white">Daevnt</span>
+            <span class="text-white">Daveevent</span>
           </a>
 
           <!-- Right: Nav Links -->
